--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@strapi/strapi": "^5.31.0",
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.90.5",
